force-app/main/default/objects/Account_Contact_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account associated with this contact</description>
    <inlineHelpText>Account associated with this contact</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Contact History</relationshipLabel>
    <relationshipName>Account_Contact_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>