force-app/main/default/objects/Account_Contact_History__c/fields/End_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Reason__c</fullName>
    <description>End Reason Description</description>
    <inlineHelpText>End Reason Description</inlineHelpText>
    <label>End Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>