force-app/main/default/objects/Account_Contact_History__c/fields/Is_Role_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Role_Active__c</fullName>
    <description>Is Active will be false, when there is end date populated</description>
    <formula>IF(ISBLANK(End_Date__c)==false ,false, true)</formula>
    <inlineHelpText>Is Active will be false, when there is end date populated</inlineHelpText>
    <label>Is Role Active</label>
    <type>Checkbox</type>
</CustomField>