force-app/main/default/objects/Account_Contact_History__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>Lost Reason</description>
    <inlineHelpText>Lost Reason</inlineHelpText>
    <label>Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>