force-app/main/default/objects/Account_Contact_History__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role played by this contact for this account</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>