force-app/main/default/objects/Account_Contact_History__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of Account Contact Role relationship</description>
    <inlineHelpText>Start Date of Account Contact Role relationship</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>